# eia-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt
app/: config.py  main.py
app/api/: routes.py
app/app/api/: routes.py
app/app/core/: config.py
app/app/schemas/: chat.py
app/core/: config.py
app/models/: database.py
app/schemas/: webhook.py
app/services/: ai_agent.py  ai_service.py  chatwoot.py  chatwoot_parser.py  chatwoot_service.py  conversation.py  memory_service.py  webhook_parser.py
bot/: pyvenv.cfg
bot/Scripts/: activate  activate.bat
