[project]
name = "eia-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg==0.30.0",
    "fastapi==0.115.5",
    "httpx==0.27.2",
    "openai==1.57.0",
    "pydantic==2.10.3",
    "python-dotenv==1.2.2",
    "uvicorn[standard]==0.32.1",
]
